<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content_user_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="250dp"
    android:gravity="center"
    android:background="@color/baseBgWhite"
    android:padding="@dimen/base_sub_side_spacer"
    android:visibility="gone">

    <RelativeLayout
        android:id="@+id/content_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/selected_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/selected_name_hint"
            android:textSize="@dimen/selected_user_name" />

        <TextView
            android:id="@+id/selected_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/selected_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/selected_name"
            android:hint="@string/selected_gender_hint"
            android:textColor="@color/baseTxtGray"
            android:textSize="@dimen/selected_user_info" />

        <TextView
            android:id="@+id/selected_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/selected_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/selected_gender"
            android:hint="@string/selected_code_hint"
            android:textColor="@color/baseTxtGray"
            android:textSize="@dimen/selected_user_info" />

        <TextView
            android:id="@+id/selected_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/selected_name"
            android:hint="@string/selected_phone_num_hint"
            android:textSize="@dimen/selected_user_info" />

        <ImageView
            android:id="@+id/selected_popup_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@drawable/option_btn" />

    </RelativeLayout>

    <View
        android:id="@+id/div_line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/content_user_info"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#efefef" />

    <RelativeLayout
        android:id="@+id/time_check_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/div_line_1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/start_time_label"
                style="@style/time_check_label"
                android:text="@string/start_time_label" />

            <TextView
                android:id="@+id/start_time"
                style="@style/time_check"
                android:layout_alignTop="@id/start_time_label"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@id/start_time_label"
                android:hint="@string/start_time_hint" />

            <TextView
                android:id="@+id/end_time_label"
                style="@style/time_check_label"
                android:layout_below="@id/start_time_label"
                android:text="@string/end_time_label" />

            <TextView
                android:id="@+id/end_time"
                style="@style/time_check"
                android:layout_alignTop="@id/end_time_label"
                android:layout_toEndOf="@id/end_time_label"
                android:hint="@string/end_time_hint" />

        </RelativeLayout>

    </RelativeLayout>

    <!-- check button -->
    <LinearLayout
        android:id="@+id/check_btn_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/time_check_container"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_check_btn"
            style="@style/time_check_btn"
            android:text="@string/start_check_btn" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3" />

        <TextView
            android:id="@+id/end_check_btn"
            style="@style/time_check_btn"
            android:text="@string/end_check_btn" />

    </LinearLayout>

</RelativeLayout>