<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="24dp">

    <RelativeLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/selected_name_hint"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/name"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/name"
            android:hint="@string/selected_gender_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/name"
            android:layout_toEndOf="@id/gender"
            android:hint="@string/selected_code_hint"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:hint="@string/selected_phone_num_hint"/>

    </RelativeLayout>

</RelativeLayout>