<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act.TabletAct">

    <TextView
        android:id="@+id/student_code_txt"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:gravity="center"
        android:textSize="40sp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="4"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/tel1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel1"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toTopOf="@+id/tel4"
        app:layout_constraintEnd_toStartOf="@+id/tel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/student_code_txt"
        />

    <Button
        android:id="@+id/tel2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel2"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toEndOf="@+id/tel1"
        app:layout_constraintEnd_toStartOf="@+id/tel3"
        app:layout_constraintTop_toTopOf="@+id/tel1"
        app:layout_constraintBottom_toTopOf="@+id/tel5" />

    <Button
        android:id="@+id/tel3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel3"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tel2"
        app:layout_constraintTop_toTopOf="@+id/tel2"
        app:layout_constraintBottom_toTopOf="@+id/tel6"/>

    <Button
        android:id="@+id/tel4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel4"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintBottom_toTopOf="@+id/tel7"
        app:layout_constraintEnd_toStartOf="@+id/tel5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel1" />

    <Button
        android:id="@+id/tel5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel5"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toEndOf="@+id/tel4"
        app:layout_constraintEnd_toStartOf="@+id/tel6"
        app:layout_constraintTop_toBottomOf="@+id/tel2"
        app:layout_constraintBottom_toTopOf="@+id/tel8"/>

    <Button
        android:id="@+id/tel6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel6"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tel5"
        app:layout_constraintTop_toBottomOf="@+id/tel3"
        app:layout_constraintBottom_toTopOf="@+id/tel9"/>

    <Button
        android:id="@+id/tel7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel7"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tel8"
        app:layout_constraintTop_toBottomOf="@+id/tel4"
        app:layout_constraintBottom_toTopOf="@+id/delete_btn"/>

    <Button
        android:id="@+id/tel8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel8"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toEndOf="@+id/tel7"
        app:layout_constraintEnd_toEndOf="@+id/tel9"
        app:layout_constraintTop_toBottomOf="@+id/tel5"
        app:layout_constraintBottom_toTopOf="@+id/tel0" />

    <Button
        android:id="@+id/tel9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel9"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tel8"
        app:layout_constraintTop_toBottomOf="@+id/tel6"
        app:layout_constraintBottom_toTopOf="@+id/send_btn" />

    <ImageButton
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:src="@drawable/delete"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tel0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel7" />

    <Button
        android:id="@+id/tel0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/buttonshape"
        android:text="@string/tel0"
        android:textSize="30sp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="@+id/send_btn"
        app:layout_constraintStart_toEndOf="@+id/delete_btn"
        app:layout_constraintTop_toBottomOf="@+id/tel8"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/send_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="25sp"
        android:background="@drawable/buttonshape"
        android:src="@drawable/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tel0"
        app:layout_constraintTop_toBottomOf="@+id/tel9"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>